# Stellar-S-OLX

contracts/hello_world/src/: lib.rs
solx-frontend/: .env  package.json  tsconfig.json
solx-frontend/src/: App.tsx
solx-frontend/src/contracts/: hello_world.ts  util.ts
solx-frontend/src/hello_world/: README.md  package-lock.json  package.json
solx-frontend/src/hello_world/src/: index.ts
soroban-hello/: Cargo.toml
soroban-hello/contracts/hello_world/: Cargo.toml
soroban-hello/contracts/hello_world/src/: lib.rs
stellar/contracts/hello_world/src/: lib.rs  test.rs
stellar/contracts/hello_world/test_snapshots/test/: test.1.json
